fix background scrollbar fix duplicate css import for Material Icons

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,15 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: white;
+
+    * {
+        color: #37474f;
+    }
+
+    button * {
+        color: cadetblue;
+    }
 }
 
 .top {
@@ -52,8 +61,6 @@ nav {
     justify-content: space-evenly;
     width: 100vw;
     margin-top: 100px;
-    position: sticky;
-    top: 0px;
     z-index: 999999;
 
     button {
